# Tetris

./: CITATION.cff  CMakeLists.txt  Dockerfile  LICENSE  README.md
.github/workflows/: build-test.yaml  cmake-gtest.yaml
include/: args.h  color.h  controller.h  game.h  grid.h  location.h  rotation.h  shape.h  tetromino.h
src/: CMakeLists.txt  main.cpp
src/args/: CMakeLists.txt  args.cpp
src/color/: CMakeLists.txt  color.cpp
src/controller/: CMakeLists.txt  controller.cpp
src/controller/ui/: board.h  color_env.cpp  color_env.h  grid_board.h  next_tetromino_board.h  score_board.h
src/game/: CMakeLists.txt  game.cpp
src/grid/: CMakeLists.txt  grid.cpp
src/location/: CMakeLists.txt
src/rotation/: CMakeLists.txt  rotation.cpp
src/shape/: CMakeLists.txt
src/tetromino/: CMakeLists.txt  tetromino.cpp
src/tetromino/subtype/: i.h  j.h  l.h  o.h  s.h  t.h  z.h
tests/: CMakeLists.txt  grid_test.cpp  rotation_test.cpp  tetromino_test.cpp
